<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Swahili SMS Filter</string>
    <string name="service_status">Service Status</string>
    <string name="status_active">Active</string>
    <string name="status_inactive">Inactive</string>
    <string name="test_message">Test Message</string>
    <string name="enter_message">Enter a message to test</string>
    <string name="enter_sender">Enter sender number</string>
    <string name="test_button">Test Message</string>
    <string name="statistics">Statistics</string>
    <string name="spam_detected">Spam messages detected: %d</string>
    <string name="total_messages">Total messages processed: %d</string>
    <string name="history">Message History</string>
    <string name="result_spam">Result: This message appears to be SPAM</string>
    <string name="result_ham">Result: This message appears to be HAM (not spam)</string>
    <string name="change_language">Change Language</string>
    <string name="sender_number">Sender Number</string>
    <string name="clear_history">Clear History</string>
</resources>